# h-mec-ginkgo

./: .gitignore  CMakeLists.txt  README.md
experiments/: CMakeLists.txt  README.md
experiments/h-mec-rsf-eigen-v10/: CMakeLists.txt  compile_hmec.sh  h_mec_rsf_v10.cpp  model_cpp
experiments/h-mec-rsf-eigen-v10/include/: LR_setup.cpp  LR_setup.h  constants.hpp  functions.cpp  functions.hpp  global_variables.hpp  hdf5.cpp  hdf5.hpp  init_geometry.cpp  init_geometry.h  move_markers.cpp  move_markers.h  power_law.cpp  power_law.h  process_p_cells.cpp  process_p_cells.h  read_in_matrices.cpp  read_in_matrices.h  run_simulation.cpp  run_simulation.h  write_output.cpp  write_output.h
experiments/h-mec-rsf-eigen-v2/: h-mec-rsf-eigen-v2.cpp
experiments/h-mec-rsf-eigen-v8/: CMakeLists.txt
experiments/h-mec-rsf-eigen-v8/data/: constants.hpp
experiments/h-mec-rsf-ginkgo-v1/: CMakeLists.txt  README.md  h_mec_rsf_ginkgo_v1.cpp
experiments/h-mec-rsf-ginkgo-v1/include/: LR_setup.h  constants.cpp  constants.hpp  functions.cpp  functions.hpp  ginkgo_exec.hpp  global_variables.hpp  hdf5.cpp  hdf5.hpp  init_geometry.cpp  init_geometry.h  move_markers.h  power_law.cpp  power_law.h  process_p_cells.cpp  process_p_cells.h  read_in_matrices.cpp  read_in_matrices.h  run_simulation.h  run_simulation_gko.cpp  write_output.cpp  write_output.h
experiments/h-mec-rsf-ginkgo-v1/no-include/: move_markers.h
experiments/h-mec-rsf-ginkgo-v1/not_included/: LR_setup.cpp  move_markers.cpp  run_simulation.cpp  run_simulation_gko_original.cpp
experiments/test_program/: CMakeLists.txt  test_program.cpp
plots/: GeneratePlots.jl  README.md  plots
